<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_bottom_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/button" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/insurances_compare_text"
            android:textSize="16sp"
            android:textColor="@color/grey"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_discount_code"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:background="@drawable/shape_light_grey_rounded_outline">

            <ImageView
                android:id="@+id/discount_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_tag"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/icon" />

            <TextView
                android:id="@+id/discount_code_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/discount_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/discount_code_text"
                android:textSize="12sp"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/light_grey"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>