<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_image_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="12dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="24dp"
                android:contentDescription="@string/image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/item_image"
                app:layout_constraintEnd_toStartOf="@id/item_image"
                app:layout_constraintTop_toTopOf="@id/item_image" />

            <TextView
                android:id="@+id/discount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="-8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/shape_yellow_rounded_fill"
                android:paddingHorizontal="3dp"
                android:paddingVertical="1dp"
                android:textColor="@color/text_color"
                android:textSize="11sp"
                android:text="@string/discount_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/item_image"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="-8dp"
                android:layout_marginEnd="24dp"
                android:paddingHorizontal="4dp"
                android:paddingVertical="3dp"
                android:textColor="@color/light_grey"
                android:textSize="11sp"
                app:layout_constraintStart_toEndOf="@id/discount_text"
                app:layout_constraintTop_toTopOf="@id/item_image" />

            <TextView
                android:id="@+id/discounted_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="24dp"
                android:paddingHorizontal="4dp"
                android:paddingVertical="3dp"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/price_unit_text"
                app:layout_constraintTop_toTopOf="@id/price_unit_text"
                app:layout_constraintStart_toEndOf="@id/discount_text" />

            <TextView
                android:id="@+id/price_unit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:paddingHorizontal="4dp"
                android:paddingVertical="3dp"
                android:text="@string/tooman_text"
                android:textColor="@color/light_grey"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@id/item_image"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/star_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_star_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_image" />

            <TextView
                android:id="@+id/rate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="4dp"
                android:paddingVertical="3dp"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/star_icon"
                app:layout_constraintEnd_toStartOf="@id/star_icon"
                app:layout_constraintTop_toTopOf="@id/star_icon" />

            <TextView
                android:id="@+id/number_of_comments_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="4dp"
                android:paddingVertical="3dp"
                android:text="@string/number_of_comments_text"
                android:textColor="@color/light_grey"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/star_icon"
                app:layout_constraintEnd_toStartOf="@id/rate_text"
                app:layout_constraintTop_toTopOf="@id/star_icon" />

            <FrameLayout
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_grey"
                app:layout_constraintTop_toBottomOf="@id/star_icon" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_show_and_order"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider">

                <ImageView
                    android:id="@+id/show_and_order_icon"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_chevron_left"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/show_and_order_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8sp"
                    android:text="@string/show_and_order_text"
                    android:textColor="@color/light_grey"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/show_and_order_icon"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>