<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/partial_toolbar_with_discount_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/filters_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_filters"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_sort"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/filters_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_filter_plus_outline"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/notify_icon"
                        android:layout_width="6dp"
                        android:layout_height="6dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="6dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/shape_circle_red"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/filters_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12sp"
                        android:layout_marginEnd="12dp"
                        android:text="@string/filters_text"
                        android:textColor="@color/text_color"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/filters_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_filters"
                    app:layout_constraintStart_toEndOf="@id/btn_cover"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/sort_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_sort_ascending"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/notify_icon2"
                        android:layout_width="6dp"
                        android:layout_height="6dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="6dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/shape_circle_red"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/sort_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12sp"
                        android:layout_marginEnd="12dp"
                        android:text="@string/sort_text"
                        android:textColor="@color/text_color"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/sort_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_cover"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_sort"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/cover_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_lifebuoy"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/notify_icon3"
                        android:layout_width="6dp"
                        android:layout_height="6dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="6dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/shape_circle_red"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/cover_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12sp"
                        android:layout_marginEnd="12dp"
                        android:text="@string/cover_text"
                        android:textColor="@color/text_color"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/cover_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/toolbar_shadow"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/top_down_shadow"
                app:layout_constraintTop_toBottomOf="@id/filters_layout" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/filters_layout">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp" />

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:indeterminateTint="@color/yellow"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>